# quark

./: .gitignore  .gitmodules  CMakeLists.txt  gen.bat
Demo/RPG/: CMakeLists.txt
Demo/RPG/Asset/Shader/: Sprite.hlsl
Demo/RPG/Source/: CMakeSources.cmake  RPGPrerequisites.h  main.cpp
Demo/Sandbox/: CMakeLists.txt  gen-sandbox.bat
Demo/Sandbox/Asset/Shader/: Color.ps.hlsl  Color.vs.hlsl  CommonInclude.hlsl  ForwardRendering.hlsl  Light.ps.hlsl  Light.vs.hlsl  Texture.ps.hlsl  Texture.vs.hlsl
Demo/Sandbox/CMake/: ProjectConfig.h.in
Demo/Sandbox/Source/: App.cpp  CMakeSources.cmake  Sandbox.cpp  Sandbox.h
Demo/Sandbox/Source/AI/: AIAttackTargetExecuteNode.cpp  AIAttackTargetExecuteNode.h  AILookTargetExecuteNode.cpp  AILookTargetExecuteNode.h  AIRunawayExecuteNode.cpp  AIRunawayExecuteNode.h
Demo/Sandbox/Source/Component/: BattleFleetAIComponent.cpp  BattleFleetAIComponent.h  BulletComponent.cpp  BulletComponent.h  FighterAIComponent.cpp  FighterAIComponent.h  FollowTargetComponent.cpp  FollowTargetComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  PlayerShipComponent.cpp  PlayerShipComponent.h  ShipAIComponent.cpp  ShipAIComponent.h  ShipComponent.cpp  ShipComponent.h  SpawnerComponent.cpp  SpawnerComponent.h
Demo/Sandbox/Source/Utility/: SandboxResourceUtil.cpp  SandboxResourceUtil.h
Source/: CMakeLists.txt
Source/CMake/: EngineConfig.h.in  FindClang.cmake  FrameworkConfig.h.in
Source/Foundation/: CMakeLists.txt
Source/Foundation/Core/: CMakeSources.cmake  CoreApplication.cpp  CoreApplication.h  CorePrerequisites.h  gen-core-msvc.bat  gen-core-single.bat  gen-core.bat
Source/Foundation/Core/Component/: BoxCollider2DComponent.cpp  BoxCollider2DComponent.h  CameraComponent.cpp  CameraComponent.h  Collider2DComponent.cpp  Collider2DComponent.h  CubeColliderComponent.cpp  CubeColliderComponent.h  LightComponent.cpp  LightComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SphereCollider2DComponent.cpp  SphereCollider2DComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h
Source/Foundation/Core/Image/: PixelData.cpp  PixelData.h  PixelUtil.cpp  PixelUtil.h  PixelVolume.h  Texture.cpp  Texture.h  TextureSurface.cpp  TextureSurface.h
Source/Foundation/Core/Importer/: Importer.cpp  Importer.h  ImporterOptions.cpp  ImporterOptions.h  SpecificImporter.cpp  SpecificImporter.h
Source/Foundation/Core/Input/: InputDevice.cpp  InputDevice.h  InputManager.h  InputType.h
Source/Foundation/Core/Manager/: BufferManager.cpp  BufferManager.h  CommandBufferManager.cpp  CommandBufferManager.h  GpuProgramManager.cpp  GpuProgramManager.h  InputManager.cpp  InputManager.h  MeshManager.cpp  MeshManager.h  RenderAPIManager.cpp  RenderAPIManager.h  RenderStateManager.cpp  RenderStateManager.h  RenderWindowManager.cpp  RenderWindowManager.h  SceneManager.cpp  SceneManager.h  SceneObjectManager.cpp  SceneObjectManager.h  TextureManager.cpp  TextureManager.h
Source/Foundation/Core/Material/: GpuParamsSet.cpp  GpuParamsSet.h  Material.cpp  Material.h  MaterialParam.cpp  MaterialParam.h  MaterialParams.cpp  MaterialParams.h  MaterialType.h  Pass.cpp  Pass.h  Shader.cpp  Shader.h  ShaderVariation.cpp  ShaderVariation.h  Technique.cpp  Technique.h
Source/Foundation/Core/Mesh/: Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshType.h
Source/Foundation/Core/Physics/: AABBTree.cpp  AABBTree.h  BoxCollider2D.cpp  BoxCollider2D.h  Collider.cpp  Collider.h  Collider2D.cpp  Collider2D.h  CubeCollider.cpp  CubeCollider.h  Physics.cpp  Physics.h  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsScene.cpp  PhysicsScene.h  PlaneCollider.cpp  PlaneCollider.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h  (+2 more)
Source/Foundation/Engine/: Application.cpp  Application.h  CMakeSources.cmake  Prerequisites.h  gen-engine-msvc.bat  gen-engine-single.bat  gen-engine.bat
Source/Foundation/Utility/: CMakeSources.cmake  UtilityCore.h  gen-utility-msvc.bat  gen-utility.bat
Source/Plugin/AssimpImporter/: AIPrerequisites.h  CMakeLists.txt  CMakeSources.cmake  Plugin.cpp  generate.bat
Source/Plugin/Box2d/: B2DPrerequisites.h  CMakeLists.txt  CMakeSources.cmake  Plugin.cpp
Source/Plugin/DX11/: CMakeLists.txt  CMakeSources.cmake  DX11Prerequisites.h  Plugin.cpp  gen-dx11-msvc.bat  gen-dx11.bat  gen.bat
Source/Plugin/FTImporter/: CMakeLists.txt  CMakeSources.cmake  FTPrerequisites.h  Plugin.cpp
Source/Plugin/FreeImageImporter/: CMakeLists.txt  CMakeSources.cmake  FIPrerequisites.h  Plugin.cpp
Source/Tool/: CMakeLists.txt
Source/Tool/QuarkHeaderTool/: CMakeLists.txt  CMakeSources.cmake  QHTPrerequisites.h  main.cpp
Test/: CMakeLists.txt  TestUtility.cpp  TestUtility.h  gen-testclasses.bat  main.cpp
Test/Core/: CMakeSources.cmake  CoreApplicationTest.cpp  TestCore.h
Test/Core/Scene/: SceneTest.cpp
Test/TestCommon/: CMakeLists.txt
Test/TestCommon/Sources/: DynLibTestModule.cpp  DynLibTestModule.h  TestCommonPrerequisites.h
Test/TestDynLib/: CMakeLists.txt
Test/TestDynLib/Sources/: MyDynLibTestModule.cpp  MyDynLibTestModule.h  Plugin.cpp
Test/Utility/: CMakeSources.cmake  TestUtility.h  gen-test-utility.bat
Test/Utility/Container/: ArrayTest.cpp  MapTest.cpp  StringTest.cpp
Test/Utility/Exception/: ExceptionTest.cpp
Test/Utility/FileSystem/: FileSystemTest.cpp  StreamTest.cpp
Test/Utility/Logging/: LoggerTest.cpp
Test/Utility/Math/: Matrix4Test.cpp  QuaternionTest.cpp  Vector3Test.cpp
Test/Utility/Misc/: CStringTest.cpp  ModuleTest.cpp  ModuleTest.h  StringBuilderTest.cpp
Test/Utility/Plugin/: PluginTest.cpp
Test/Utility/Reflection/: ClassTest.cpp  EnumTest.cpp  ReflectionTest.cpp
Test/Utility/Serialization/: ArchiveTest.cpp  ArchiveTest.g.cpp  ArchiveTest.g.h  ArchiveTest.h  BaseClass.g.cpp  BaseClass.g.h  BaseClass.h  OtherActor.g.cpp  OtherActor.g.h  OtherActor.h  OtherData.h  SaveData.g.cpp  SaveData.g.h  SaveData.h
Test/Utility/String/: StringConverterTest.cpp
(+414 files in other folders)
